--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,34 +1,20 @@
-header{
-    overflow: hidden;
-    background-color: #286fe0;
+#layout-header nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  background: #2196f3;
+  color: white;
+  box-shadow: 1px 1px 1px 1px lightgrey; }
+  #layout-header nav .mini-logo p {
+    margin: 5px;
+    font-size: 1.4rem;
+    font-weight: bold; }
+  #layout-header nav .auth-links ul {
+    margin: 5% 5px;
     display: flex;
-    justify-content: space-between;
-}
-#logo{
-    font-family: sans-serif;
+    list-style: none; }
+    #layout-header nav .auth-links ul li {
+      margin-right: 10px; }
+  #layout-header nav a {
     color: white;
-    font-size: 20px;
-    margin-left:5px ;
-}
-ul{
-    list-style: none;
-
-}
-ul a{
-    text-decoration: none;
-    color: white;
-}
-.right-corner{
-    display: flex;
-    justify-content: space-around;
-  text-align: center;
-  margin-right: 5px;
-  font-size: 20px;
-}
-/* #sign-in
-{
-    padding: 4px;
-} */
-.right-corner a{
-    padding: 4px;
-}
+    text-decoration: none; }
