--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,9 +1,20 @@
-<footer>
-    <div id="rights">
-        <p>© Social. All Right Reserved</p>
+<footer id="layout-footer">
+    <div>
+        <p>
+            &#169; Yuvraj Singh. All Rights Reserved
+        </p>
     </div>
-<div id="home-pro">
-<a href="/">Home</a>
-<a href="/users/profile">profile</a>
-</div>
+
+    <div>
+        <nav class="footer-nav">
+            <ul>
+                <li>
+                    <a href="/">Home</a>
+                </li>
+                <li>
+                    <a href="/users/profile">Profile</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </footer>
