--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,7 +1,8 @@
 body{
     margin: 0;
     /* text-align: center; */
-
+background-color: whitesmoke;
+color: #2196f3;
     #layout-main{
         height: 100%;
     }
