--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -1,18 +1,19 @@
 #layout-footer{
    
     color: white;
-    position:fixed;
-    left:0px;
-    bottom:0px;
-    z-index:1;
-    width:100%;
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    background: grey;
+    display: flex;
+    justify-content: flex-start;
     a{
         color: white;
         text-decoration: none;
     }
 
     background: grey;
-    padding: 5px 10px;
     display: flex;
     justify-content: flex-start;
 
