--- a/views/user_signin.ejs
+++ b/views/user_signin.ejs
@@ -1,9 +1,12 @@
+<link rel="stylesheet" href="/css/signin.css">
 
-<div id="sign-in">
-    <h1>sign in</h1>
+<div class="sign-in">
+    <h2>Sign in</h2>
     <form action="/users/create-session" method="POST">
     <input type="email" name="email" placeholder="Email or Username" required>
+    <br>
     <input type="password" name="password" placeholder="Password" required>
-    <input type="submit"  value="Sign In">
+    <br>
+    <input type="submit" class="btn" value="Sign In">
     </form>
 </div>
